@@ -19,7 +19,7 @@ if ( !defined( 'MEDIAWIKI' ) ) {
 	die( 'Not an entry point.' );
 }
 
-if ( version_compare( $wgVersion, '1.16', '<' ) ) {
+if ( version_compare( $wgVersion, '1.16c', '<' ) ) {
 	die( '<b>Error:</b> This version of Semantic MediaWiki requires MediaWiki 1.16 or above; use SMW 1.6.x for MediaWiki 1.15.x.' );
 }
 
@@ -33,7 +33,8 @@ if ( !defined( 'Validator_VERSION' ) ) {
 	die( '<b>Error:</b> You need to have <a href="http://www.mediawiki.org/wiki/Extension:Validator">Validator</a> installed in order to use <a href="http://www.semantic-mediawiki.org">Semantic MediaWiki</a>.<br />' );
 }
 
-require_once dirname( __FILE__ ) . '/SMW_Settings.php';
+// The SMW version number.
+define( 'SMW_VERSION', '1.7 beta 1' );
 
 // Registration of the extension credits, see Special:Version.
 $wgExtensionCredits['semantic'][] = array(
@@ -45,5 +46,10 @@ $wgExtensionCredits['semantic'][] = array(
 	'descriptionmsg' => 'smw-desc'
 );
 
+// A flag used to indicate SMW defines a semantic extension type for extension crdits.
+define( 'SEMANTIC_EXTENSION_TYPE', true );
+
 // A flag used to indicate SMW supports Validator style parameter definitions and validation in the SMWResultPrinter class.
 define( 'SMW_SUPPORTS_VALIDATOR', true );
+
+require_once dirname( __FILE__ ) . '/SMW_Settings.php';
